<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General">

        <ListPreference
            android:entries="@array/default_storage"
            android:entryValues="@array/default_storage"
            android:key="Default_key"
            android:summary="My videos"
            android:title="Default values" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="autoupload_key"
            android:summary="@string/upload_summary"
            android:title="Auto-upload" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/upload_quality"
            android:entryValues="@array/upload_quality"
            android:key="quality_key"
            android:summary="@string/quality_summary"
            android:title="@string/upload_quality" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notification_header">

        <SwitchPreference
            android:defaultValue="false"
            android:key="notification_key"
            android:title="@string/message_notification" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/ringtones"
            android:entryValues="@array/ringtones"
            android:key=""
            android:summary="select your ringtone"
            android:title="@string/ringtone" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_1"
            android:summary="@string/vibrate_summary"
            android:title="@string/vibrate_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_title">
        <Preference
            android:enabled="true"
            android:key="about_key"
            android:selectable="false"
            android:summary="@string/about_txt" />

        <Preference
            android:enabled="true"
            android:key="version_key"
            android:title="@string/version_title"
            android:selectable="false"
            android:summary="@string/version_summary" />
        <EditTextPreference
            android:defaultValue="Type here"
            android:key="feedback_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/feedback_summary"
            android:title="@string/feedback_title" />
        <Preference
            android:enabled="true"
            android:key="example_key"
            android:title="@string/faq_title"
            android:summary="@string/faq_summary" >

            <intent android:action="android.intent.action.VIEW"
                android:data="@string/faq_web" />

        </Preference>

        <Preference
            android:enabled="true"
            android:key="example_key"
            android:title="@string/privacy_policy">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/privacy_web" />
        </Preference>

        <Preference
            android:enabled="true"
            android:key="example_key"
            android:title="@string/terms_and_conditions"

           >
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/terms_web_page" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>