<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AllFragments.RegFrag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Regtxt"
            android:textStyle="bold"
            android:textSize="@dimen/head_one"
            android:gravity="center"
            android:layout_marginTop="@dimen/top_view_margin"
            />
        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/reg_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_fname"
            android:layout_marginLeft="@dimen/common_side_margin"
            android:layout_marginRight="@dimen/common_side_margin"
            android:hint="@string/first_nametxt"
            android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/reg_lname"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_side_margin"
            android:layout_marginRight="@dimen/common_side_margin"
            android:hint="@string/last_nametxt"
            android:drawableLeft="@drawable/ic_fname"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email"
            android:layout_marginLeft="@dimen/common_side_margin"
            android:layout_marginRight="@dimen/common_side_margin"
            android:hint="@string/emailtxt" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/reg_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:drawableLeft="@drawable/ic_phone"
            android:layout_marginLeft="@dimen/common_side_margin"
            android:layout_marginRight="@dimen/common_side_margin"
            android:hint="@string/phone_numbertxt" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginLeft="@dimen/common_side_margin"
            android:layout_marginRight="@dimen/common_side_margin"
            android:drawableLeft="@drawable/icon_dob"
            android:onClick="pickdate"
            android:text="@string/DOBtxt"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="20dp"
            tools:ignore="OnClick" />



        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/reg_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:drawableLeft="@drawable/ic_username"
            android:layout_marginLeft="@dimen/common_side_margin"
            android:layout_marginRight="@dimen/common_side_margin"
            android:hint="@string/usernametxt" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/reg_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/common_side_margin"
            android:layout_marginRight="@dimen/common_side_margin"
            android:hint="@string/passtxt"
            android:drawableLeft="@drawable/ic_pass"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/reg_conf_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_pass"
            android:layout_marginLeft="@dimen/common_side_margin"
            android:layout_marginRight="@dimen/common_side_margin"
            android:hint="@string/confirm_passwordtxt" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/submit_register"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ok" />
    </LinearLayout>

</ScrollView>